# cmake-project-skeleton

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BuildOptions.cmake  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  Packaging.cmake  README.md
.github/: README_template.md
.github/ISSUE_TEMPLATE/: FEATURE.md  ISSUE.md  QUESTION.md
.github/workflows/: build.yml
cmake/: AddExecutableWithLinkerScriptDep.cmake  Conversions.cmake
cmake/analysis/: clang-tidy.cmake  clang-tidy.sh  complexity.cmake  coverage.cmake  cppcheck.cmake  sanitizers.cmake
cmake/analysis/cppcheck-rules/RedundantConditionalOperator/: example.cpp
cmake/compiler/: CheckAndApplyFlags.cmake  DefaultCompilerSettings.cmake
cmake/documentation/: Doxyfile.in  doxygen.cmake
cmake/format/: clang-format.cmake  format.sh
cmake/linker/: DefaultLinkerSettings.cmake  map.cmake
cmake/linker-scripts/stm/: STM32F103VBIx_FLASH.ld
cmake/test/: cmocka.cmake  cpputest.cmake
cmake/toolchains/cross/: STM32F103VBIx.cmake  arm-none-eabi-gcc.cmake  cortex-m3.cmake  cortex-m4.cmake  cortex-m7.cmake
cmake/toolchains/native/: clang.cmake  gcc-11.cmake  gcc-7.cmake  gcc-8.cmake  gcc-9.cmake
docs/: Doxyfile
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt
src/lib/example/: CMakeLists.txt  example.c  example.h
src/utility/: CMakeLists.txt
test/: CMakeLists.txt  example_tests.cpp  main.c  main.cpp  test_suite.c
tools/: clang-tidy.sh  format-patch.sh  format.sh
